--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+
+    <link id='favicon' rel="shortcut icon" href="./assets/images/logo1.png" type="image/x-png">
+    
     <title>N.G Studio</title>
 
     <!-- Bootstrap core CSS -->
